--- a/Barjonas.Common.Windows/View/SharedStyles.xaml
+++ b/Barjonas.Common.Windows/View/SharedStyles.xaml
@@ -14,6 +14,7 @@
     <conv:MatchToBooleanConverter x:Key="MatchToBooleanConverterWithCollapse" FalseVisibility="Collapsed" />
     <conv:MatchToBooleanConverter x:Key="NoMatchToBooleanConverterWithCollapse" FalseVisibility="Collapsed" Invert="true"/>
     <conv:NullToMinusOneConverter x:Key="NullToMinusOneConverter"/>
+    <conv:NullToMinusOneConverter x:Key="NullToMinusOneConverterOneBased" DisplayIsOneBased="True"/>
     <conv:NullableToStringConverter x:Key="NullableToStringConverter"/>
     <Thickness x:Key="ControlMargin">10</Thickness>
     <Thickness x:Key="ControlSmallMargin">5</Thickness>
